# workflow-engine

./: .env.local  .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml
examples/with_options/: cargo.toml
examples/with_options/src/: main.rs
scripts/: setup.sh
src/: api.rs  engine.rs  lib.rs  main.rs  scheduler.rs
src/engine/: dependency.rs  execution.rs  executor.rs  mod.rs  options.rs  task_state.rs  task_wrapper.rs  validation.rs  workflow.rs
src/engine/dependency/: dependency.rs  mod.rs
src/engine/execution/: execution.rs  mod.rs
src/engine/executor/: executor.rs  mod.rs
src/engine/executor/tests/: mod.rs
src/engine/task_state/: mod.rs
src/engine/task_state/tests/: mod.rs
src/engine/task_wrapper/: mod.rs  task_wrapper.rs
src/engine/validation/: mod.rs  validation.rs
src/engine/validation/tests/: mod.rs
src/engine/workflow/: mod.rs  workflow.rs
src/storage/: mod.rs  sqlite_storage.rs
src/storage/implementations/: memory_storage.rs  mod.rs  sqlite_storage.rs
src/task/: example_task.rs  mod.rs
src/task/retry/: mod.rs  policy.rs
src/task/tests/: mod.rs
tests/: complex_dependencies_test.rs  error_handling_test.rs  workflow_test.rs
