[package]
name = "workflow-engine"
version = "0.1.0"
authors = ["Cody Lambert <codylambertdev@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A multi-threaded, asynchronous workflow engine for Rust."
repository = "https://github.com/romanguy13/workflow-engine"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

# Example-specific dependencies
[[example]]
name = "with-options"
path = "examples/with_options/src/main.rs"
